8038222: Assembler::bsrl fails on assert when -UseCountLeadingZerosInstruction is used on CPU with LZCNT support

Remove the overly strict assert

Reviewed-by: kvn, twisti